...
    <string name="entry_category">Kategoria</string>
    <string name="entry_category_choose">Wybierz kategorię</string>
    <string name="entry_category_expanded">Rozwinięta</string>
    <string name="entry_category_collapsed">Zwinięta</string>
    <string name="entry_category_archived">Archiwalna</string>
    <string name="entry_category_error">Wybierz aktywną kategorię.</string>
    <string name="entry_no_active_categories">Brak aktywnych kategorii. Dodaj lub przywróć kategorię w ustawieniach.</string>
    <string name="entry_subcategory">Podkategoria</string>
    <string name="entry_subcategory_optional">Podkategoria (opcjonalnie)</string>
    <string name="entry_subcategory_none">Bez podkategorii</string>
    <string name="entry_subcategory_expanded">Rozwinięta</string>
    <string name="entry_subcategory_collapsed">Zwinięta</string>
    <string name="entry_subcategory_archived">Archiwalna</string>
    <string name="entry_subcategory_selected_marker">Wybrana</string>
    <string name="entry_optional_title">Tytuł (opcjonalnie)</string>
    <string name="entry_title_error">Tytuł może mieć najwyżej 160 znaków.</string>
    <string name="entry_tags">Tagi (opcjonalnie)</string>
    <string name="entry_tags_hint">Oddziel tagi przecinkami.</string>
    <string name="entry_tags_error">Tag może mieć najwyżej 40 znaków (maks. 10 tagów).</string>
    <string name="entry_save">Zapisz wpis</string>
    <string name="entry_save_changes">Zapisz zmiany</string>
...
    <string name="taxonomy_add_subcategory">Dodaj podkategorię</string>
    <string name="taxonomy_expand_category">Rozwiń kategorię %1$s</string>
    <string name="taxonomy_collapse_category">Zwiń kategorię %1$s</string>
    <string name="taxonomy_expanded">Rozwinięta</string>
    <string name="taxonomy_collapsed">Zwinięta</string>
    <string name="taxonomy_no_subcategories">Brak podkategorii</string>
    <string name="taxonomy_no_active_subcategories">Brak aktywnych podkategorii</string>
    <string name="taxonomy_edit_category_named">Edytuj kategorię %1$s</string>
    <string name="taxonomy_add_subcategory_named">Dodaj podkategorię do kategorii %1$s</string>
    <string name="taxonomy_archive_category_named">Archiwizuj kategorię %1$s</string>
    <string name="taxonomy_restore_category_named">Przywróć kategorię %1$s</string>
    <string name="taxonomy_edit_subcategory_named">Edytuj podkategorię %1$s</string>
    <string name="taxonomy_archive_subcategory_named">Archiwizuj podkategorię %1$s</string>
...
